--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ jobs:
     - stage: "sleep 109"
       script: sleep 10
 vm:
-size: [gpu-medium | gpu-large | gpu-xlarge] #new values in schema for existing key
+size: gpu-medium
