--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 os: linux
+language: ruby
+cache: bundler
 rvm: 2.6.3
 jobs:
   include:
     - stage: "sleep 109"
       script: sleep 10
-vm:
-size: gpu-xlarge
+
