--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 os: linux
+services:
+  - redis-server
 rvm: 2.6.3
 jobs:
   include:
     - stage: "sleep 109"
       script: sleep 10
-vm:
-size: gpu-medium
